--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 x64/
+IDE_Slap.VC.db
+IDE_Slap.VC.VC.opendb
+.vs/IDE_Slap/v15/Browse.VC.opendb
+.vs/IDE_Slap/v15/ipch/AutoPCH/2dfe589224626055/SFILEMANAGER.ipch
+.vs/IDE_Slap/v15/ipch/AutoPCH/8bc1911ade021ce2/SMAINWINDOWFILEMENU.ipch
+.vs/IDE_Slap/v15/ipch/AutoPCH/fdd4e4c5007edcc2/IDE_SLAP.ipch
+.vs/IDE_Slap/v15/Browse.VC.db
